--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,12 +1,12 @@
 html,
 body {
-  background-color: #008080;
+  background-color: snow;
   padding: 0;
   margin: 0;
   font-family: Inter, sans-serif, Helvetica Neue, Arial, Courier New, Oxygen, Roboto Mono, -apple-system, BlinkMacSystemFont, Roboto, Ubuntu, Cantarell,
   Fira Sans, Droid Sans, sans-serif;
   font-weight: 400;
-  color: snow;
+  color: #008080;
 }
 
 div {
