--- a/styles/globals.css
+++ b/styles/globals.css
@@ -65,6 +65,10 @@ hr {
   align-items: center;
 }
 
+p.listed-item {
+  text-indent: 10%;
+}
+
 a:link { text-decoration: underline; color: rgb(23, 88, 102)}
 a:visited { text-decoration: underline; color: rgb(23, 88, 102)}
 a:hover { text-decoration: underline; color: rgb(23, 88, 102)}
