--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,38 +1,63 @@
 html,
 body {
-  background-color: snow;
-  padding: 0;
-  margin: 0;
-  font-family: Inter, sans-serif, Helvetica Neue, Arial, Courier New, Oxygen, Roboto Mono, -apple-system, BlinkMacSystemFont, Roboto, Ubuntu, Cantarell,
-  Fira Sans, Droid Sans, sans-serif;
-  font-weight: 400;
-  color: #008080;
+    background-color: snow;
+    height: 100%;
+    margin: 0;
+    font-family: Arial, sans-serif;
+    background: #fff;
+    color: #000;
 }
 
-div {
-  font-style: normal;
-  padding-left: 40px;
-  padding-right: 40px;
-  margin-top: 10px;
-  margin-bottom: 10px;
-  margin-left: 40px;
-  margin-right: 40px;
-  text-align: justify;
-  line-height: 24px;
-  font-size: 14px;
+header {
+    background: #000;
+    color: #fff;
+    padding: 10px 0;
 }
 
-* {
-  box-sizing: border-box;
+nav ul {
+    list-style: none;
+    padding: 0;
+    text-align: center;
+}
+
+nav li {
+    display: inline;
+    margin-right: 20px;
+}
+
+nav a {
+    color: #fff;
+    text-decoration: none;
+    font-weight: bold;
 }
 
 main {
-  padding: 5rem 0;
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+    text-align: center;
+    padding: 50px 10px;
+}
+
+.profile {
+    margin-bottom: 50px;
+}
+
+.profile-picture {
+    width: 140px;
+    height: 140px;
+    background: #ccc;
+    border-radius: 50%;
+    display: inline-block;
+    margin-bottom: 20px;
+}
+
+.social-links {
+    margin-bottom: 20px;
+}
+
+.additional-content {
+    background: #333;
+    color: #fff;
+    padding: 50px 10px;
+    margin-top: 50px;
 }
 
 code {
