--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,7 +3,7 @@ body {
     height: 100%;
     margin: 0;
     font-family: Arial, sans-serif;
-    background: #fff;
+    background-color: #fff;
     color: #000;
 }
 
