--- a/styles/globals.css
+++ b/styles/globals.css
@@ -95,7 +95,7 @@ code {
   align-items: center;
 }
 */
-
+/*
 .listed-item {
   text-indent: 10%;
 }
@@ -104,3 +104,4 @@ a:link { text-decoration: underline; color: rgb(23, 88, 102)}
 a:visited { text-decoration: underline; color: rgb(23, 88, 102)}
 a:hover { text-decoration: underline; color: rgb(23, 88, 102)}
 a:active { text-decoration: underline; color: rgb(23, 88, 102)}
+*/
