--- a/styles/globals.css
+++ b/styles/globals.css
@@ -60,6 +60,7 @@ h1 {
 p {
     margin-bottom: 50px; /* Increased bottom margin for paragraph */
     font-family: 'Gill Sans', sans-serif;
+    font-weight: 200;
 }
 
 .additional-content {
