--- a/styles/globals.css
+++ b/styles/globals.css
@@ -67,7 +67,7 @@ p {
 }
 
 .additional-content {
-    background: #04060C; /* Darker section for the footer or additional content */
+    background: #1C1E21; /* Darker section for the footer or additional content */
     color: #F2EBEC;
     padding: 50px 10px;
     margin-top: 50px;
