--- a/components/Header.module.css
+++ b/components/Header.module.css
@@ -1,15 +1,27 @@
 .header {
-  width: 100%;
-  height: 20px;
-  background-color: snow;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-family: Courier New, Inter, Arial, Oxygen, Roboto Mono, -apple-system, BlinkMacSystemFont, Roboto, Ubuntu, Cantarell,
-    Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  font-style: monospace;
-  font-weight: 700;
-  font-size: 16px;
-  text-decoration: none;
+    height: 100%;
+    margin: 0;
+    font-family: 'EB Garamond';font-size: 22px;
+    background: #04060C; /* Dark background for the body */
+    color: #F2EBEC; /* Light text color for contrast */
+    max-width: 80%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
+header {
+    background: #04060C;
+    color: #F2EBEC;
+    padding: 10px 0;
+}
+
+nav ul {
+    list-style: none;
+    padding: 0;
+    text-align: center;
+}
+
+nav li {
+    display: inline;
+    margin-right: 40px; /* Increased spacing between nav items */
+}
