--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,16 +2,16 @@ body, html {
     height: 100%;
     margin: 0;
     font-family: 'EB Garamond';font-size: 22px;
-    background: #04060C; /* Dark background for the body */
-    color: #F2EBEC; /* Light text color for contrast */
+    background: #F2EBEC; /* Dark background for the body */
+    color: #04060C; /* Light text color for contrast */
     max-width: 80%;
     margin-left: auto;
     margin-right: auto;
 }
 
 header {
-    background: #04060C;
-    color: #F2EBEC;
+    background: #F2EBEC;
+    color: #04060C;
     padding: 10px 0;
 }
 
@@ -27,7 +27,7 @@ nav li {
 }
 
 nav a {
-    color: #F2EBEC;
+    color: #04060C;
     text-decoration: none;
     font-weight: bold;
     font-size: 1.2em; /* Increased font size for nav links */
@@ -45,7 +45,7 @@ main {
 .profile-picture {
     width: 140px;
     height: 140px;
-    background: #F2EBEC; /* White background for profile picture circle */
+    background: #04060C; /* White background for profile picture circle */
     border-radius: 50%;
     display: inline-block;
     margin-bottom: 30px; /* Adjusted spacing below profile picture */
@@ -64,6 +64,7 @@ h1 {
 p {
     margin-bottom: 50px; /* Increased bottom margin for paragraph */
     font-family: 'Gill Sans', sans-serif;
+    text-align: left;
     font-weight: 200;
 }
 
@@ -73,8 +74,8 @@ p a {
 }
 
 .additional-content {
-    background: #1C1E21; /* Darker section for the footer or additional content */
-    color: #F2EBEC;
+    background: #04060C; /* Darker section for the footer or additional content */
+    color: #04060C;
     padding: 50px 10px;
     margin-top: 50px;
 }
@@ -111,8 +112,8 @@ code {
   text-indent: 10%;
 }
 
-a:link { text-decoration: underline; color: #F2EBEC}
-a:visited { text-decoration: underline; color: #F2EBEC}
-a:hover { text-decoration: underline; color: #F2EBEC}
-a:active { text-decoration: underline; color: #F2EBEC}
+a:link { text-decoration: underline; color: #262933}
+a:visited { text-decoration: underline; color: #262933}
+a:hover { text-decoration: underline; color: #262933}
+a:active { text-decoration: underline; color: #262933}
 */
