--- a/components/Footer.module.css
+++ b/components/Footer.module.css
@@ -1,10 +1,13 @@
 .footer {
-  width: 100%;
-  height: 100px;
-  border-top: 1px solid #eaeaea;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+    height: 100%;
+    margin: 0;
+    font-family: 'EB Garamond';font-size: 14px;
+    background: #04060C; /* Dark background for the body */
+    color: #F2EBEC; /* Light text color for contrast */
+    max-width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 10px 0;
 }
 
 .logo {
