--- a/components/Footer.module.css
+++ b/components/Footer.module.css
@@ -2,8 +2,8 @@
     height: 100%;
     margin: 0;
     font-family: 'EB Garamond';font-size: 14px;font-weight: 200;
-    background: #04060C; /* Dark background for the body */
-    color: #F2EBEC; /* Light text color for contrast */
+    background: #F2EBEC; /* Dark background for the body */
+    color: #04060C; /* Light text color for contrast */
     max-width: 80%;
     margin-left: auto;
     margin-right: auto;
